# kernelfoundry

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml
docs/: README.md  conf.py  index.rst
docs/_static/: custom.css
docs/api/: modules.rst
kernelfoundry/: __init__.py  compiler.py  conftest.py  custom_test.py  testing.py
kernelfoundry/utils/: __init__.py  performance.py  sysinfo.py
tests/: test_auto_replicate_inputs.py
